[package]
name = "avfaudio"
version = "0.0.1"
edition = "2021"
authors = ["Eugene Hauptmann"]
homepage = "https://github.com/eugenehp/avfaudio-rs"
repository = "https://github.com/eugenehp/avfaudio-rs"
description = "Rust library to setup AVAudioSession from Apple's AVFAudio framework"
license = "MIT"
categories = ["AVAudioSession", "AVFAudio", "ios", "visionos", "macos"]

[[example]]
name = "session"

[dependencies]
avfaudio2-sys = "0.2.4"
block = "0.1.6"
